<resources>


    <string name="APP_KEY">p6t8mdrqksbj4d0</string>

    <string name="app_name">Flashcards</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="app_link">play.google.com</string>

    <string name="menu_all_sets">All sets</string>
    <string name="menu_most_used">Most used</string>
    <string name="menu_labels">Labels</string>
    <string name="menu_important">Important</string>
    <string name="menu_todo">Todo</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_create_label">Create new label</string>

    <string name="menu_trash">Trash</string>

    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_create_new_label">Create new label</string>
    <string name="title_activity_about">About</string>

    <string name="done">done</string>
    <string name="flashcards">flashcards</string>
    <string name="enter_set_name">Enter set name</string>
    <string name="title_activity_flashcard">Flashcard</string>
    <string name="new_flashcard_set">New set</string>

    <string name="hint_enter_set_name">example: Korean Vocabulary</string>

    <string name="edit_set_name">Edit set name</string>
    <string name="delete_set">Move to Trash</string>
    <string name="save_set">Save and go back</string>
    <string name="reverse_set">Reverse cards</string>
    <string name="set_saved">Set saved</string>
    <string name="set_archived">Set moved to Trash</string>
    <string name="add_label">Add label</string>
    <string name="title_activity_edit_flashcard_dialog">EditFlashcardDialog</string>

    <string name="back_up_restore">Backup and restore</string>
    <string name="sign_in">Sign up with Dropbox</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>

    <string name="take_photo">Take photo</string>
    <string name="choose_image">Choose image</string>
    <string name="drawing">Drawing</string>
    <string name="edit_text">Edit text</string>
    <string name="edit_text_hint">Enter question, title, word..</string>
    <string name="edit_text_hint_back">Enter answer, definition, descriptions..</string>
    <string name="choose_set_color">Choose set color</string>
    <string name="title_activity_add_label">Add labels</string>
    <string name="see_statistics">Statistics</string>
    <string name="true_answers">Number of true answers reached per day</string>
    <string name="efficency_chart">Efficiency chart calculated from your daily learning</string>
    <string name="minutes">Minutes</string>
    <string name="time_chart">Time spent to study this set per day</string>

    <string name="add_new_label">Add new label</string>
    <string name="add_label_hint">example: Exams</string>
    <string name="DONE">DONE</string>
    <string name="untitled_set">Untitled set</string>

    <string name="title_activity_play_fullscreen">Session</string>
    <string name="end_button">End session</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_play">PlayActivity</string>


    <string name="action_rate_us">Rate us</string>
    <string name="title_activity_draw"></string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="ok">OK</string>

    <string name="pencil">Pencil</string>
    <string name="pen">Pen</string>
    <string name="brush">Brush</string>
    <string name="color">Color</string>


    <string name="give_camera_permission">Camera permission is not granted. To use this functionality, give Camera access to this app from Settings!</string>
    <string name="could_not_load_image">Could not load image from storage, please, check your storage empty space!</string>

    <string name="no_sets">Once you create a new set, you\'ll see it listed here</string>
    <string name="no_sets_trash">Once you delete a set, you\'ll see it listed here</string>
    <string name="no_cards">Once you create a new flashcard, you\'ll see it listed here</string>
    <string name="empty_set">This set is empty, try to add some cards</string>

    <string name="example_card_front">Example front side of a flashcard, you can add text, image or drawing</string>
    <string name="example_card_back">Example back side of a flashcard, you can add text, image or drawing</string>

    <string name="welcome">Welcome to Flashcards!</string>
    <string name="lets_create_set">It looks like you have no sets. Let\'s create one!</string>
    <string name="lets_create_flashcards">Our awesome set does not have flashcards. Let\'s add one!</string>

    <string name="adding_cards">Create flashcards</string>
    <string name="add_flashcards">Now time to create some awesome flashcards!</string>

    <string name="study_mode">Study mode</string>
    <string name="time_to_study">Let\'s study our awesome cards!</string>

    <string name="copy_right">Flashcards © %1$d</string>

    <string name="description">Speed up your learning with Flashcards! Create sets, add flashcards and play with them anywhere.\nFlashcards is free, and always will be. One thing you give us is 5 stars!</string>

    <string name="it_is_free">It is free, and always will be!</string>
    <string name="speed_up_learning">Speed up your learning with Flashcards!</string>

    <string name="create_sets">Create sets</string>
    <string name="create_sets_desc">Sets are organized, labeled and colored to easily find them later</string>

    <string name="create_flashcards">Add flashcards</string>
    <string name="create_flashcards_desc">Flashcards can contain text, image or drawing on both sides</string>

    <string name="study_flashcards">Study mode</string>
    <string name="study_flashcards_desc">Study your flashcards anytime! Shake your phone to shuffle cards, or simply slide right/left</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_study">StudyActivity</string>


    <string name="put_back">Put back</string>
    <string name="delete_forever">Delete forever</string>
    <string name="what_to_with_this_flashcard">This set is in trash, what would you like to do?</string>
    <string name="support"><![CDATA[Help & Support]]></string>

</resources>
