<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_all_sets"
                android:checkable="true"
                android:icon="@drawable/ic_all_sets_24dp"
                android:title="All sets" />
            <item
                android:id="@+id/nav_most_used"
                android:checkable="true"
                android:icon="@drawable/ic_starred_24dp"
                android:title="@string/menu_most_used" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_sync"
        android:checkable="true"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/back_up_restore" />

    <item
        android:id="@+id/nav_archive"
        android:checkable="true"
        android:icon="@drawable/trash"
        android:title="@string/menu_trash" />

    <item
        android:id="@+id/labels"
        android:title="@string/menu_labels">
        <menu></menu>
    </item>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:checkable="true"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_help" />

            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_about_24dp"
                android:title="@string/menu_about" />

        </menu>
    </item>

</menu>
