<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:icon="@drawable/ic_undo_black_24dp"
        android:title="@string/undo" />

    <item
        android:id="@+id/action_redo"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:icon="@drawable/ic_redo_black_24dp"
        android:title="@string/redo" />

    <item
        android:id="@+id/action_ok"
        app:showAsAction="always"
        android:icon="@drawable/ic_done_green_24dp"
        android:orderInCategory="100"
        android:title="@string/ok" />

</menu>